crates/rome_js_formatter/tests/specs/prettier/typescript/instantiation-expression/basic.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: basic.ts
---
# Input
```js
// basic
const foo = bar<T>;

```

# Output
```js
// basic
const foo = bar<T>;

```

# Errors
```
error[SyntaxError]: expected an expression but instead found ';'
  ┌─ basic.ts:2:19
  │
2 │ const foo = bar<T>;
  │                   ^ Expected an expression here


```


